// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alternative button 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#eaab00",
      "border": "1px solid #eaab00",
      "borderRadius": "12px",
      "boxSizing": "border-box",
      "color": "#ffffff",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }
>
  Click me
</button>
`;

exports[`basic alternative button 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#ffffff",
      "border": "1px solid #31363e",
      "borderRadius": "12px",
      "boxSizing": "border-box",
      "color": "#31363e",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }
>
  Click me
</button>
`;

exports[`basic button 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#00a9e0",
      "border": "1px solid #00a9e0",
      "borderRadius": "12px",
      "boxSizing": "border-box",
      "color": "#ffffff",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }
>
  Click me
</button>
`;

exports[`button can be disabled 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#ffffff",
      "border": "1px solid rgba(0,0,0,0)",
      "borderRadius": "12px",
      "boxSizing": "border-box",
      "color": "rgba(49,54,62,0.3)",
      "cursor": "not-allowed",
      "display": "inline-block",
      "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }
/>
`;

exports[`button can be resized 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#ffffff",
      "border": "1px solid #31363e",
      "borderRadius": "12px",
      "boxSizing": "border-box",
      "color": "#31363e",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
      "fontSize": "10.5px",
      "fontWeight": undefined,
      "height": "24px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }
/>
`;

exports[`important button 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#ea6c02",
      "border": "1px solid #ea6c02",
      "borderRadius": "12px",
      "boxSizing": "border-box",
      "color": "#ffffff",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }
>
  Click me
</button>
`;

exports[`special button 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#31363e",
      "border": "1px solid #31363e",
      "borderRadius": "12px",
      "boxSizing": "border-box",
      "color": "#ffffff",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }
>
  Click me
</button>
`;

exports[`standard button 1`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#ffffff",
      "border": "1px solid #31363e",
      "borderRadius": "12px",
      "boxSizing": "border-box",
      "color": "#31363e",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }
>
  Click me
</button>
`;

exports[`standard button 2`] = `
<button
  data-radium={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "background": "#ffffff",
      "border": "1px solid #31363e",
      "borderRadius": "12px",
      "boxSizing": "border-box",
      "color": "#31363e",
      "cursor": "pointer",
      "display": "inline-block",
      "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
      "fontSize": "14px",
      "fontWeight": undefined,
      "height": "32px",
      "letterSpacing": "0.03em",
      "lineHeight": "2.285",
      "margin": "0",
      "padding": "0 1em",
      "textAlign": "center",
      "textShadow": "none",
      "transition": "all 0.5s linear 0ms",
      "whiteSpace": "no-wrap",
    }
  }
>
  Click me
</button>
`;
